<resources>
    <string name="app_name">MusicBrain</string>
    <string name="artistsRoute">Artists</string>
    <string name="genresRoute">Genres</string>
    <string name="artistDetailRoute">Detail</string>
    <string name="navigation_rail">Navigate between items here</string>
    <string name="disambiguation">Disambiguation</string>
    <string name="gender">Gender</string>
    <string name="score">Score</string>
    <string name="instrumentsRoute">Instruments</string>
    <string name="type">Type\n</string>
    <string name="instrumentDetailRoute">Detail</string>

</resources>